# nyc-taxi-weather-2019

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
pipeline/: __init__.py
pipeline/constants/: columns.py  modules.py  paths.py  tables.py  times.py  tmp_tables.py  tqdm_settings.py  unique_settings.py  upper_bounds_settings.py
pipeline/dashboard/: app.js  build.py  dashboard-charts.js  dashboard-renderers.js  dashboard-state.js  dashboard-utils.js  dashboard.css  dashboard.html  dashboard.js  dashboard.py  index.html  styles.css
pipeline/dashboard/js/: charts.js  renderers.js  shared.js  state.js  templates.js  utils.js
pipeline/feature/: FEATURE_ANALYSIS.md
pipeline/feature/eda/: 01_profile_features.py  02_daily_weather_metrics.py  03_weather_impact_metrics.py  __init__.py
pipeline/feature/etl/: 01_join_taxi_weather.py  __init__.py
pipeline/services/: connect.py  helpers.py  paths.py  queries.py  tables.py  tqdm_settings.py  views.py
pipeline/taxi/: CLEANING_TAXI_DATA.md
pipeline/taxi/eda/: 01_schemas.py  02_low_duplicates.py  03_high_duplicates.py  04_payments.py  05_aggregate_columns.py  05_before_business_rules.py  06_after_business_rules.py  06_before_business_rules.py  07_after_business_rules.py  07_before_upper_bounds.py  08_after_upper_bounds.py  08_before_upper_bounds.py  09_after_upper_bounds.py
pipeline/taxi/etl/: 01_download_yellow_tripdata.py  02_ingest_data.py  (+8 more)
pipeline/weather/: CLEANING_WEATHER_DATA.md
tests_manual/: test_bounds_eda.py  upper_bounds_compare.py  upper_bounds_edges.py  upper_bounds_table.py
(+57 files in other folders)
