[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "duckdb>=1.5.1",
    "kaggle>=2.0.0",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "duckdb-cli>=1.5.1",
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
